[package]
name = "stbchat-discord-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serenity = { version = "0.11.7", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
smol = "1.3.0"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.33.0", default-features = false, features = ["time", "macros", "rt-multi-thread"] }
